--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
@@ -3,10 +3,9 @@ Collections:
     template: ExtData/chemistry/Lana/v2011/DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
   SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4:
     template: ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
-  GEOS-CF.v01.rpl.chm_tavg_1hr_g1440x721_v1.%y4%m2%d2_%h2%n2z.nc4:
-    template: ExtData/chemistry/GEOS-CF_NRT/das/Y%y4/M%m2/D%d2/GEOS-CF.v01.rpl.chm_tavg_1hr_g1440x721_v1.%y4%m2%d2_%h2%n2z.nc4
-  GEOS-CF.v01.rpl.chm_inst_3hr_g1440x721_h35.%y4%m2%d2_%h2%n2z.nc4:
-    template: ExtData/chemistry/GEOS-CF_NRT/das/Y%y4/M%m2/D%d2/GEOS-CF.v01.rpl.chm_inst_3hr_g1440x721_h35.%y4%m2%d2_%h2%n2z.nc4 
+  c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4:
+    template: ExtData/c48_CFv2/holding/chm_inst_1hr_glo_L180x91_v72/c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h200z.nc4
+    freq: PT01H
   SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21-revised/L72/SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
   SU2G_SO2-em-anthro_CMIP_CEDS_gn_energy.x2304_y1441_t12.%y4.nc4:
@@ -41,8 +40,6 @@ Samplings:
     update_reference_time: '0'
   SU2G_1hr:
     update_frequency: PT01H
-  SU2G_3hr:
-    update_frequency: PT03H  
 
 Exports:
   SU_AIRCRAFT:
@@ -84,19 +81,19 @@ Exports:
     sample: SU2G_sample_2
     variable: conc
   SU_H2O2:
-    collection: GEOS-CF.v01.rpl.chm_tavg_1hr_g1440x721_v1.%y4%m2%d2_%h2%n2z.nc4
+    collection: c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4
     regrid: CONSERVE
     sample: SU2G_1hr
     variable: H2O2
   SU_NO3:
-    collection: GEOS-CF.v01.rpl.chm_inst_3hr_g1440x721_h35.%y4%m2%d2_%h2%n2z.nc4
+    collection: c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4
     regrid: CONSERVE
-    sample: SU2G_3hr
+    sample: SU2G_1hr
     variable: NO3
   SU_OH:
-    collection: GEOS-CF.v01.rpl.chm_inst_3hr_g1440x721_h35.%y4%m2%d2_%h2%n2z.nc4
+    collection: c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4
     regrid: CONSERVE
-    sample: SU2G_3hr
+    sample: SU2G_1hr
     variable: OH
   SU_SHIPSO2:
     collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
