--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/AMIP/NI2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/AMIP/NI2G_GridComp_ExtData.yaml
@@ -5,7 +5,7 @@ Collections:
     template: ExtData/chemistry/GEIA/v0.0.0/sfc/GEIA.emis_NH3.ocean.x576_y361.t12.20080715_12z.nc4
   NI2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4:
     template: ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
-  c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4:
+  NI2G_c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4:
     template: ExtData/c48_CFv2/holding/chm_inst_1hr_glo_L180x91_v72/c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h200z.nc4
     freq: PT01H
   NI2G_NH3-em-anthro_CMIP_CEDS_gn.x2304_y1441_t12.%y4.nc4:
@@ -70,7 +70,7 @@ Exports:
     sample: NI2G_sample_2
     variable: nh3_emis
   NITRATE_HNO3:
-    collection: c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4
+    collection: NI2G_c48_CFv2.chm_inst_1hr_glo_L180x91_v72.%y4%m2%d2_%h2%n2z.nc4
     regrid: CONSERVE
     sample: NI2G_1hr
     variable: hno3
