--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
@@ -101,7 +101,10 @@ category: EXPORT
  SUSTSCATAU    | 1          | xy   | N    | size(self%wavelengths_vertint) | SO4 Stratospheric Aerosol Optical Depth Due to Scattering
  SO4SAREA      | m2 m-3     | xyz  | C    |                                | SO4 Surface Area Density
  SO4SNUM       | m-3        | xyz  | C    |                                | SO4 Number Density
- H2O2CONC      | kg m-3     | xyz  | C    |                                | H2O2 Mass Concentration
+ SUXH2O2       | mol mol-1  | xyz  | C    |                                | H2O2 Volume Mixing Ratio dry air
+ SUXNO3        | mol mol-1  | xyz  | C    |                                | NO3 Volume Mixing Ratio dry air
+ SUXOH         | mol mol-1  | xyz  | C    |                                | OH Volume Mixing Ratio dry air
+
 
 category: INTERNAL
 #----------------------------------------------------------------------------------------
