--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
@@ -3,7 +3,7 @@
 #
 
 aerosol_radBands_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/opticsBands_SS.v3_3.RRTMG.nc
-aerosol_monochromatic_optics_file: /discover/nobackup/pcolarco/fvInput/AeroCom/x/optics_SS.v3_6.nc
+aerosol_monochromatic_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/optics_SS.v3_3.nc
 
 particle_radius_microns: 0.079 0.316 1.119 2.818 7.772
 
