--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.br.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.br.rc
@@ -46,6 +46,9 @@ molecular_weight: 0.18  0.18
 # Number of particles per kg mass
 fnum: 9.76e17  9.76e17
 
+# Number median radius [um]
+particle_radius_number: 0.0212 0.0212
+
 # Sigma of lognormal number distribution
 sigma: 2.20  2.20
 
