Replaced cfg and universal_cfg in SS2G with hconfig
Turned off other GOCART children (DU2G, SU2G, CA2G and NI2G) for now, since they still use the old interface of GA_EnvironmentMod::load_config_file

--- a/ESMF/GOCART2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CMakeLists.txt
@@ -2,11 +2,11 @@ esma_set_this ()
 
 set (alldirs
   GA_Environment
-  DU2G_GridComp
+  # DU2G_GridComp
   SS2G_GridComp
-  CA2G_GridComp
-  NI2G_GridComp
-  SU2G_GridComp
+  # CA2G_GridComp
+  # NI2G_GridComp
+  # SU2G_GridComp
   )
 
 set (srcs
