--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,10 +62,12 @@ jobs:
           mepo clone --partial blobless
           mepo status
 
-      - name: Mepo develop usual suspects
-        run: |
-          mepo develop GEOSgcm_GridComp GEOSgcm_App GMAO_Shared GEOS_Util
-          mepo status
+      #######################################################################
+      # - name: Mepo develop usual suspects                                 #
+      #   run: |                                                            #
+      #     mepo develop GEOSgcm_GridComp GEOSgcm_App GMAO_Shared GEOS_Util #
+      #     mepo status                                                     #
+      #######################################################################
 
       - name: Update other branches
         if: ${{ github.event.pull_request.head.ref != 'main' && github.event.pull_request.head.ref != 'develop' }}
