--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
@@ -26,7 +26,7 @@ fwet_rain: 1.0 1.0 1.0 1.0 1.0
 
 # Emissions methods and scaling
 emission_scheme: 3                                     # 1 for Gong 2003, 2 for ...
-emission_scale:  0.600 0.525 0.475 0.450 0.425 0.415   # L181 global scaling factor 
+emission_scale:  0.600 0.525 0.475 0.450 0.425 0.415   # L181 global scaling factor
 #emission_scale: 0.613 0.613 0.613 0.429 0.429 0.429   # L072 global scaling factor
 sstEmisFlag:     2                                     # Apply a correction to emissions based on SST (see code)
 hoppelFlag:      .false.              # Apply Hoppel correction (set non-zero, see Fan and Toon 2011)
@@ -45,4 +45,6 @@ nbins: 5
 
 pressure_lid_in_hPa: 40.0
 
-
+# SettlingSolver options
+# Options: 'gocart' or 'ufs'
+settling_scheme: 'gocart'
