Move Barry Baker changes to main

--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.oc.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.oc.rc
@@ -58,3 +58,7 @@ pressure_lid_in_hPa: 0.01
 nbins: 2
 
 point_emissions_srcfilen: /dev/null
+
+# SettlingSolver options
+# Options: 'gocart' or 'ufs'
+settling_scheme: 'gocart'
