--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
@@ -72,3 +72,7 @@ soil_moisture_factor: 1.0
 soil_drylimit_factor: 1.0
 vertical_to_horizontal_flux_ratio_limit: 2.e-04
 drag_partition_option: 2
+
+# SettlingSolver options
+# Options: 'gocart' or 'ufs'
+settling_scheme: 'gocart'
