--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
@@ -44,6 +44,7 @@ category: EXPORT
  SSMASS        | kg kg-1      | xyz   | C     |                                | Sea Salt Mass Mixing Ratio
  SSMASS25      | kg kg-1      | xyz   | C     |                                | Sea Salt Mass Mixing Ratio of Particulate Matter < 2.5 microns (PM2.5)
  SSCONC        | kg m-3       | xyz   | C     |                                | Sea Salt Mass Concentration
+ SSSD_V        | m s-1        | xyz   | C     | self%nbins                     | Sea Salt Settling Velocity (Bin %d)
  SSEXTCOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient
  SSEXTCOEFRH20 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient - Fixed RH=20%
  SSEXTCOEFRH80 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient - Fixed RH=80%
