Updated config file to use the new 'restart' options

--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
@@ -37,4 +37,6 @@ mapl:
   misc:
     activate_all_imports: true
     activate_all_exports: true
-    write_exports: true
+    restart:
+      import: true
+      internal: true
