SS2G_instance_SS.yaml - checkpoint everything

--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
@@ -40,3 +40,7 @@ mapl:
     restart:
       import: true
       internal: true
+    checkpoint:
+      export: true
+      import: true
+      internal: true
