--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
@@ -47,6 +47,9 @@ wet_removal_scheme: gocart ! default value
 # Scavenging efficiency per bin [km-1]
 fscav: 0.2  0.2  0.2  0.2  0.2
 
+# Large scale rainout efficiency per bin for wet_removal_scheme == gocart
+fwet: 1.0 1.0 1.0 1.0 1.0
+
 # Rainout efficiency per bin for wet_removal_scheme == ufs
 fwet_ice: 0.8 0.8 0.8 1.0 1.0
 fwet_snow: 0.8 0.8 0.8 1.0 1.0
