--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
@@ -19,6 +19,9 @@ wet_removal_scheme: gocart ! default value
 # Scavenging efficiency per bin [km-1]
 fscav: 0.4  0.4  0.4  0.4  0.4
 
+# Rainout efficiency per bin for wet_removal_scheme == gocart
+fwet: 1.0 1.0 1.0 1.0 1.0
+
 # Rainout efficiency per bin for wet_removal_scheme == ufs
 fwet_ice: 1.0 1.0 1.0 1.0 1.0
 fwet_snow: 1.0 1.0 1.0 1.0 1.0
