prc: hooks for photolysis coupling

--- a/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
@@ -42,3 +42,4 @@ wavelengths_for_profile_aop_in_nm: 550               # must be included in LUT
 wavelengths_for_vertically_integrated_aop_in_nm: 550 # must be included in LUT
 
 aerosol_photolysis_wavelength_in_nm_from_LUT: 200 300 400 500 600
+n_phase_function_moments_photolysis:          0
