Updated SS2G_instance_SS.yaml to match SS2G_instance_SS.rc

--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
@@ -13,6 +13,11 @@ wet_removal_scheme: gocart # default value
 # Scavenging efficiency per bin [km-1]
 fscav: [0.4, 0.4, 0.4, 0.4, 0.4]
 
+# Rainout efficiency per bin for wet_removal_scheme == ufs
+fwet_ice: [1.0, 1.0, 1.0, 1.0, 1.0]
+fwet_snow: [1.0, 1.0, 1.0, 1.0, 1.0]
+fwet_rain: [1.0, 1.0, 1.0, 1.0, 1.0]
+
 # Emissions methods and scaling
 emission_scheme: 3  # 1 for Gong 2003, 2 for ...
 # emission_scale: [0.613, 0.613, 0.613, 0.429, 0.429, 0.429]  # L072 global scaling factor
@@ -20,9 +25,6 @@ emission_scale: [0.600, 0.525, 0.475, 0.450, 0.425, 0.415]   # L181 global scali
 sstEmisFlag: 2  # Apply a correction to emissions based on SST (see code)
 hoppelFlag: false  # Apply Hoppel correction (set non-zero, see Fan and Toon 2011)
 weibullFlag: false  # Apply Weibull distribution (set non-zero, see Fan and Toon 2011)
-
-# # Method of apply relative humidity to particle radius
-# rhFlag: 2  # RH swelling of Seasalt (1 for Fitzgerald 1975, 2 for Gerber 1985)
 
 # Molecular weight of species [kg mole-1]
 molecular_weight: [0.058, 0.058, 0.058, 0.058, 0.058]
