--- a/ESMF/Shared/CMakeLists.txt
+++ b/ESMF/Shared/CMakeLists.txt
@@ -3,26 +3,23 @@ esma_set_this (OVERRIDE Chem_Shared2G)
 set (srcs
   Chem_AeroGeneric.F90
   ReplenishAlarm.F90
-  )
+)
 
 esma_add_library(${this}
   SRCS ${srcs}
-  DEPENDENCIES MAPL ESMF::ESMF)
+  DEPENDENCIES MAPL MAPL.field_bundle ESMF::ESMF
+)
 
 if( EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/@GSW )
-    set (gsw_ECBUILD_SYSTEM_INCLUDED TRUE)
+  set (gsw_ECBUILD_SYSTEM_INCLUDED TRUE)
 endif()
 
 if (NOT TARGET MAPL)
   if ( IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/MAPL@ )
-    esma_add_subdirectories (
-      MAPL
-      )
+    esma_add_subdirectories (MAPL)
   endif ()
 endif ()
 
 if ( IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/GMAO_Shared@ )
-  esma_add_subdirectories (
-    GMAO_Shared
-    )
+  esma_add_subdirectories (GMAO_Shared)
 endif ()
