--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_instance_DU.rc
@@ -42,15 +42,16 @@ emission_scheme: ginoux01
 #emission_scheme: dead03
 #emission_scheme: kok14
 #emission_scheme: fengsha
+#emission_scheme: kok14simp
 
-# apply veg mask or not. 0 = N, 1 = Y [for 'ginoux01','dead03','sginoux']
+# apply veg mask or not. 0 = N, 1 = Y [for 'ginoux01','dead03','sginoux','kok14simp']
 apply_veg_mask: 1
 zero_beyond_this_gvf: 0.9
 unaffect_below_this_gvf: 0.005
 x0_sigmoid_gvf: 0.461
 k_sigmoid_gvf: 10.792
 
-# soil freezing condition ['ginoux01', 'sginoux', 'dead03', 'fengsha']
+# soil freezing condition ['ginoux01', 'sginoux', 'dead03', 'fengsha', 'kok14simp']
 soil_freezing_temp: 273.0
 
 ## ginoux01 scheme
@@ -73,6 +74,16 @@ znot_m: 100.e-06
 uniform_clay_fraction: 0.2
 source_fraction_dead03: 0.044 0.106 0.219 0.486 0.145
 
+## kok14simp scheme
+# apply owen effect? source func? 0 - No, 1 - Yes
+apply_owen_eff: 0
+apply_source_func: 0
+## [source_func_opt] matters only when apply_source_func = 1 (how? 1 - binary, 2 - actual)
+source_func_opt: 1
+Ch_DU_kok14simp: 0.00442 0.00442 0.00442 0.00356 0.00332 0.00332
+source_fraction_kok14simp: 0.044 0.106 0.219 0.486 0.145
+# znot_ms, znot_m, and monomodal_soil_diameter from above
+# soil_moisture_factor from kok14 below.
 
 ## kok14 scheme
 Ch_DU_kok14: 0.02 0.02 0.02 0.0161 0.015 0.015
