DU2G - ported SetServices, Initialize. Does not build

--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
@@ -62,35 +62,35 @@ category: EXPORT
  DUMASS        | kg kg-1    | xyz  | C    |                                | Dust Mass Mixing Ratio
  DUMASS25      | kg kg-1    | xyz  | C    |                                | Dust Mass Mixing Ratio
  DUCONC        | kg m-3     | xyz  | C    |                                | Dust Mass Concentration
- DUEXTCOEF     | m-1        | xyz  | C    | size(self%wavelengths_profile) | Dust Extinction Coefficient
- DUEXTCOEFRH20 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Dust Extinction Coefficient - Fixed RH=20%
- DUEXTCOEFRH80 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Dust Extinction Coefficient - Fixed RH=80%
- DUSCACOEF     | m-1        | xyz  | C    | size(self%wavelengths_profile) | Dust Scattering Coefficient
- DUSCACOEFRH20 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Dust Scattering Coefficient - Fixed RH=20%
- DUSCACOEFRH80 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Dust Scattering Coefficient - Fixed RH=80%
- DUBCKCOEF     | m-1 sr-1   | xyz  | C    | size(self%wavelengths_profile) | Dust Backscatter Coefficient
+ DUEXTCOEF     | m-1        | xyz  | C    | ungrd_wavelengths_profile      | Dust Extinction Coefficient
+ DUEXTCOEFRH20 | m-1        | xyz  | C    | ungrd_wavelengths_profile      | Dust Extinction Coefficient - Fixed RH=20%
+ DUEXTCOEFRH80 | m-1        | xyz  | C    | ungrd_wavelengths_profile      | Dust Extinction Coefficient - Fixed RH=80%
+ DUSCACOEF     | m-1        | xyz  | C    | ungrd_wavelengths_profile      | Dust Scattering Coefficient
+ DUSCACOEFRH20 | m-1        | xyz  | C    | ungrd_wavelengths_profile      | Dust Scattering Coefficient - Fixed RH=20%
+ DUSCACOEFRH80 | m-1        | xyz  | C    | ungrd_wavelengths_profile      | Dust Scattering Coefficient - Fixed RH=80%
+ DUBCKCOEF     | m-1 sr-1   | xyz  | C    | ungrd_wavelengths_profile      | Dust Backscatter Coefficient
 #........................................................................................
  DUSMASS       | kg m-3     | xy   | N    |                                | Dust Surface Mass Concentration
  DUCMASS       | kg m-2     | xy   | N    |                                | Dust Column Mass Density
- DUEXTTAU      | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Aerosol Optical Depth
- DUSTEXTTAU    | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Stratospheric Aerosol Optical Thickness
- DUSCATAU      | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Aerosol Optical Depth Due to Scattering
- DUSTSCATAU    | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Stratospheric Aerosol Optical Thickness Due to Scattering
+ DUEXTTAU      | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Aerosol Optical Depth
+ DUSTEXTTAU    | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Stratospheric Aerosol Optical Thickness
+ DUSCATAU      | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Aerosol Optical Depth Due to Scattering
+ DUSTSCATAU    | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Stratospheric Aerosol Optical Thickness Due to Scattering
  DUSMASS25     | kg m-3     | xy   | N    |                                | Dust Surface Mass Concentration of Particulate Matter < 2.5 microns (PM 2.5)
  DUCMASS25     | kg m-2     | xy   | N    |                                | Dust Column Mass Density of Particulate Matter < 2.5 microns (PM 2.5)
- DUEXTT25      | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Aerosol Optical Depth from Particulate Matter < 2.5 microns (PM2.5)
- DUSCAT25      | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Aerosol Optical Depth Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
+ DUEXTT25      | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Aerosol Optical Depth from Particulate Matter < 2.5 microns (PM2.5)
+ DUSCAT25      | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Aerosol Optical Depth Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
  DUAERIDX      | 1          | xy   | N    |                                | Dust TOMS UV Aerosol Index
  DUFLUXU       | kg m-1 s-1 | xy   | N    |                                | Dust column u-wind mass flux
  DUFLUXV       | kg m-1 s-1 | xy   | N    |                                | Dust column v-wind mass flux
- DUEXTTFM      | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Aerosol Optical Depth from Particulate Matter < 1 micron (PM1.0)
- DUSCATFM      | 1          | xy   | N    | size(self%wavelengths_vertint) | Dust Aerosol Optical Depth Due to Scattering from Particulate Matter < 1 micron (PM1.0)
+ DUEXTTFM      | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Aerosol Optical Depth from Particulate Matter < 1 micron (PM1.0)
+ DUSCATFM      | 1          | xy   | N    | ungrd_wavelengths_vertint      | Dust Aerosol Optical Depth Due to Scattering from Particulate Matter < 1 micron (PM1.0)
  DUANGSTR      | 1          | xy   | N    |                                | Dust Angstrom parameter [470-870 nm]
- DUEM          | kg m-2 s-1 | xy   | N    | self%nbins                     | Dust Emission (Bin %d)
- DUSD          | kg m-2 s-1 | xy   | N    | self%nbins                     | Dust Sedimentation (Bin %d)
- DUDP          | kg m-2 s-1 | xy   | N    | self%nbins                     | Dust Dry Deposition (Bin %d)
- DUWT          | kg m-2 s-1 | xy   | N    | self%nbins                     | Dust Wet Deposition (Bin %d)
- DUSV          | kg m-2 s-1 | xy   | N    | self%nbins                     | Dust Convective Scavenging (Bin %d)
+ DUEM          | kg m-2 s-1 | xy   | N    | ungrd_nbins                    | Dust Emission (Bin %d)
+ DUSD          | kg m-2 s-1 | xy   | N    | ungrd_nbins                    | Dust Sedimentation (Bin %d)
+ DUDP          | kg m-2 s-1 | xy   | N    | ungrd_nbins                    | Dust Dry Deposition (Bin %d)
+ DUWT          | kg m-2 s-1 | xy   | N    | ungrd_nbins                    | Dust Wet Deposition (Bin %d)
+ DUSV          | kg m-2 s-1 | xy   | N    | ungrd_nbins                    | Dust Convective Scavenging (Bin %d)
  DU_UST        | 1          | xy   | N    |                                | aeolian_friction_velocity
  DU_UST_T      | 1          | xy   | N    |                                | aeolian_threshold_friction_velocity
  DU_UST_TS     | 1          | xy   | N    |                                | aeolian_threshold_friction_velocity_over_smooth_surface
@@ -103,9 +103,9 @@ category: INTERNAL
 #--------------------------------------------------------------------------------------------------------------------
 #  VARIABLE    | DIMENSION   |          Additional Metadata
 #--------------------------------------------------------------------------------------------------------------------
- NAME  | UNITS | DIMS | VLOC | UNGRIDDED  | RESTART              | ADD2EXPORT | FRIENDLYTO                | LONG NAME
+ NAME  | UNITS | DIMS | VLOC | UNGRIDDED   | RESTART              | ADD2EXPORT | FRIENDLYTO                | LONG NAME
 #--------------------------------------------------------------------------------------------------------------------
- DU    |kg kg-1| xyz  | C    | self%nbins | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Dust Mixing Ratio (Bin %d)
+ DU    |kg kg-1| xyz  | C    | ungrd_nbins | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Dust Mixing Ratio (Bin %d)
 
 
 
