--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
@@ -2,11 +2,14 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES GA_Environment MAPL Chem_Shared2G Process_Library ESMF::ESMF NetCDF::NetCDF_Fortran)
+  DEPENDENCIES GA_Environment MAPL MAPL.generic3g Chem_Shared2G Process_Library ESMF::ESMF NetCDF::NetCDF_Fortran
+  TYPE SHARED)
 
-mapl_acg (${this}   DU2G_StateSpecs.rc
-          IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS
-          GET_POINTERS DECLARE_POINTERS)
+mapl_acg (
+  ${this} DU2G_StateSpecs.rc
+  IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS GET_POINTERS DECLARE_POINTERS
+  3g
+)
 
 file (GLOB_RECURSE rc_files CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.rc *.yaml)
 foreach ( file ${rc_files} )
