--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.yaml
@@ -39,6 +39,9 @@ nbins: 5
 
 pressure_lid_in_hPa: 40.0
 
+# SettlingSolver options (gocart or ufs)
+settling_scheme: gocart
+
 mapl:
   misc:
     activate_all_imports: true
